14 October 2008: Matthijs
	- Only SO_LINGER when outgoing port is set
	- Reset diff_skip when a new difffile is created (parts in the difffile 
		now have a timestamp).
	- Undo bugfix literal domain names in rdata (code adjustment)

3 October 2008: Matthijs
	- setsockopt SO_LINGER, for portability outgoing-interface (BSD/Solaris)

1 October 2008: Matthijs
	- Configure the source ip-address for notifies by the master and zone 
		transfer requests by the slave in nsd.conf.
	- Previously added source hostname/ip and port configuration for 
		nsd-notify and nsd-xfer
	- Finetuned nsdc for nsdc notify and nsdc update

29 September 2008: Matthijs
	- Bugfix: only normalize domain names in rdatas when rrtype is listed in 
		RFC 4034, section 6.2: Canonical RR Form.
	- Update TODO list

25 September 2008: Matthijs
	- Fix bug where hmac-sha256 was in algorithm table, but could not be 
		retrieved by name or id.
	- Additional arguments for nsd-notify and nsd-xfer: set outgoing 
		hostname/ip-address and source port.
	- Additional TODO entry: optimize code in nsd-* programs.

8 September 2008: Matthijs
	- RFC 4635, bugfix #130: support for hmac-sha1 and hmac-sha256 tsig 
		algorithms.
	- modify and add tpkg tests for hmac-sha1 algorithms.

2 September 2008: Matthijs
	- AXFR fallback when IXFR/UDP failed on all masters
	- Bugfix: strip off chroot value in corner cases
	- Additional debug and verbose log messages

29 August 2008: Matthijs
	- IXFR allow UDP option

26 August 2008: Matthijs
	- Code layout, additional comments and documentation typo fixes
	- IXFR over TCP, no longer UDP

17 July 2008: Matthijs
	- Make the maximum number of interfaces configurable.
	- Write pidfile *after* succesfull server initialization,
		instead of writing, and unlink if fail.

16 July 2008: Matthijs
	- Set upcoming release to 3.1.1
	- Wouter: fixed memory leaks that happened on error, mostly on
	  zone transfer errors.

11 July 2008: Matthijs