@@ -3,6 +3,7 @@
 	- Reset diff_skip when a new difffile is created (parts in the difffile 
 		now have a timestamp).
 	- Undo bugfix literal domain names in rdata (code adjustment)
+	- Split up dname_parse to parse literal dnames and normalized dnames.
 
 3 October 2008: Matthijs
 	- setsockopt SO_LINGER, for portability outgoing-interface (BSD/Solaris)
